# ApplicationInteractiveAnalyseMusicale

./: .coverage  README.md  app.py  notebook.ipynb  pyproject.toml  requirements.txt
src/music_analysis_app/: load_data.py  main.py  visualizations.py
tests/: test_load_data.py
